<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="14dp">

        <include
            android:id="@+id/header"
            layout="@layout/header_layout" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/radius_7dp"
            android:backgroundTint="@color/gray_100"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header">

            <View
                android:layout_width="0dp"
                android:layout_height="6dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="4"
                android:background="@drawable/radius_7dp"
                android:backgroundTint="@color/main_400" />

            <View
                android:layout_width="0dp"
                android:layout_height="6dp"
                android:layout_weight="2" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_register_detail_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/spoqahansansneobold"
            android:text="@string/register_detail_information"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/tv_condition_check_phrase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:drawablePadding="2dp"
            android:drawableTint="@color/gray_600"
            android:text="@string/register_detail_information_phrase1"
            android:textColor="@color/gray_400"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_detail_phrase" />

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_register_detail_phrase">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spoqahansansneobold"
                    android:text="@string/register_detail_information2"
                    android:textColor="@color/gray_600"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spoqahansansneobold"
                    android:text="@string/required_phrase"
                    android:textColor="@color/main_400"
                    android:textSize="16dp"
                    android:gravity="right"
                    android:layout_weight="1" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_condition_check_phrase2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawablePadding="2dp"
                android:drawableTint="@color/gray_300"
                android:text="@string/register_detail_information_phrase2"
                android:textColor="@color/gray_400"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_detail_phrase" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_search_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColorHint="@color/gray_200">

                <EditText
                    android:id="@+id/et_search_addr"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="@drawable/radius_8dp"
                    android:backgroundTint="@color/gray_050"
                    android:fontFamily="@font/spoqahansansneomedium"
                    android:hint="@string/register_detail_edit_text2"
                    android:paddingVertical="7dp"
                    android:textSize="14dp"
                    android:gravity="top|start"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spoqahansansneobold"
                    android:text="@string/register_image"
                    android:textColor="@color/gray_600"
                    android:textSize="18dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/spoqahansansneobold"
                    android:text="@string/select_phrase"
                    android:textColor="@color/gray_300"
                    android:textSize="16dp"
                    android:gravity="right"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_first_second_no"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/radius_8dp"
                    android:fontFamily="@font/spoqahansansneoregular"
                    android:paddingVertical="10dp"
                    android:text="@string/register_image_icon"
                    android:textSize="50sp"
                    android:textColor="@color/gray_300"
                    app:backgroundTint="@color/gray_100" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm_station_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/radius_8dp"
            android:fontFamily="@font/spoqahansansneobold"
            android:paddingHorizontal="28dp"
            android:paddingVertical="16dp"
            android:text="@string/register_location_next"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>