<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SendRequestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/gray_000"
            android:padding="0dp"
            android:src="@drawable/icon_x_mono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray_600" />

        <TextView
            android:id="@+id/tv_receive_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/spoqahansansneobold"
            android:text="@string/send_request"
            android:textColor="@color/gray_700"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_send_request_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="6dp"
            android:text="@string/send_request_phrase1"
            android:textColor="@color/gray_400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_receive_request" />

        <TextView
            android:id="@+id/tv_average_time_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqahansansneoregular"
            android:text="@string/average_time_message"
            android:textSize="14dp"
            android:layout_marginBottom="93dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_send_request_phrase2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_send_request"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
            app:layout_constraintEnd_toStartOf="@id/iv_user_profile"
            app:layout_constraintTop_toTopOf="@id/iv_user_profile" />

        <ImageView
            android:id="@+id/iv_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="79dp"
            android:src="@drawable/icon_user_profile"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_average_time_message" />

        <TextView
            android:id="@+id/tv_send_request_phrase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_request_phrase2"
            android:fontFamily="@font/spoqahansansneobold"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_send_request_phrase3"
            android:textAlignment="center"
            android:layout_marginBottom="9dp"
            />

        <TextView
            android:id="@+id/tv_send_request_phrase3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_request_phrase3"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            android:layout_marginBottom="87dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12dp"
            android:fontFamily="@font/spoqahansansneoregular"
            android:textColor="@color/gray_400"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_apply"
            app:backgroundTint="@color/gray_050"
            android:textColor="@color/gray_700"
            android:fontFamily="@font/spoqahansansneoregular"
            android:layout_marginHorizontal="14dp"
            android:background="@drawable/radius_8dp"
            android:paddingVertical="18dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="14dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>