<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/header_layout" />

        <TextView
            android:id="@+id/tv_register_phrase1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/spoqahansansneobold"
            android:text="@string/register_phrase1"
            android:textColor="@color/gray_700"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/tv_register_phrase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/spoqahansansneoregular"
            android:text="@string/register_phrase2"
            android:textSize="12dp"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_phrase1" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginHorizontal="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/radius_7dp"
            android:backgroundTint="@color/gray_100"
            />
        <LinearLayout
            android:id="@+id/ll_register_step_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_first"
                android:layout_weight="1"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_second"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_third"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@id/ll_register_step_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_step1"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/gray_600"
                android:fontFamily="@font/spoqahansansneoregular"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_step2"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/gray_600"
                android:fontFamily="@font/spoqahansansneoregular"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_step3"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/gray_600"
                android:fontFamily="@font/spoqahansansneoregular"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_register_phrase3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            android:layout_marginBottom="14dp"
            android:drawableStart="@drawable/icon_question_circle_mono"
            android:drawableTint="@color/gray_300"
            android:textColor="@color/gray_400"
            android:drawablePadding="2dp"
            android:text="@string/register_phrase3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/radius_8dp"
            android:fontFamily="@font/spoqahansansneobold"
            android:paddingVertical="18dp"
            android:text="@string/register_btn_message"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>